E1-750: truncate changes and other unit testing fixes

--- a/ui.frontend/src/main/webpack/etisalat/styles/core-components/teaser/_cross-promo.scss
+++ b/ui.frontend/src/main/webpack/etisalat/styles/core-components/teaser/_cross-promo.scss
@@ -93,6 +93,10 @@
     .cmp-teaser {
       &__content {
         padding: toRem(24) toRem(16);
+
+        @include rtlBlock() {
+          padding: toRem(24) toRem(16);
+        }
       }
 
       &__description {
