--- a/ui.frontend/src/main/webpack/etisalat/styles/custom-components/truncate.scss
+++ b/ui.frontend/src/main/webpack/etisalat/styles/custom-components/truncate.scss
@@ -1,5 +1,6 @@
 .truncate-tooltip {
     .truncate-tooltip__description{
+        position: relative;
         padding: 0;
         p {
             padding-bottom: 0;
@@ -13,6 +14,10 @@
     }
 
     .popover {
+        width: 100%;
+        @include rtlBlock(){
+            transform: translateX(45%)
+        }
         &.in {
             padding: 14px;
         }
